# kukui

./: CMakeLists.txt  CMakePresets.json  README.md  build.py  configure.py
cmake/: kukuiConfig.cmake  remote_clone.cmake  static_analyzers.cmake
cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
examples/: hello.txt  print.txt
kukui/: CMakeLists.txt
kukui/include/kukui/: CMakeLists.txt
kukui/source/: CMakeLists.txt  Main.cpp
